tests/typechecker/should_fail/synchronising_ext_choice2.csp
channel a : {0..10}
channel b

P1 = STOP [+ {1} +] STOP
